arkts_static_test/02_LexicalElements/ets_cases/2.9.1_Numeric_Literals/compile-pass/LEX_02_09_012_PASS_INT_INFER.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id LEX_02_09_012_PASS_INT_INFER
 * @expect compile-pass
 * @section 2.9.1
 * @design 整数类型推断
 * @note compile-pass 用例：验证整数类型推断
 */

// 整数推断为 int
let x = 42
let y = 0
let z = -1
